<resources>
    <string name="app_name">EM Money</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="onboarding" />
    <string name="onboarding1_title">Best app for Transform small investment to big amount</string>
    <string name="onboarding2_title">Different Opportunities for your investment</string>
    <string name="onboarding3_title">Best App provide you investment Safety</string>

    <string name="onboarding1_desc">Long term investors, pro traders or part-time traders can choose across various asset classes and create a customised portfolio. All from one platform.</string>
    <string name="onboarding2_desc">Since 2016, we are enabling lakhs of Indians to achieve their financial dreams.</string>
    <string name="onboarding3_desc">A whole ecosystem of modern investment apps tailored to specific needs, built from the ground up</string>

    <string name="login">Login</string>
    <string name="login_to">Login to </string>
    <string name="login.phone.desc">Lorem Ipsum is simply dummy text of dummy text of typesetting industry</string>
    <string name="login.email.desc">Lorem Ipsum is simply dummy text of dummy text of typesetting industry</string>

    <string name="otp_sent">OTP Sent, It will autodetect or you can enter manually</string>

    <string name="button_next">Next</string>
    <string name="button_continue">Continue</string>


    <string name="onboarding1_contentDescription">Visual Images of characters</string>
    <string name="logo_contentDescription">App logo of EM Money</string>
    <string name="request_otp">Request OTP</string>
    <string name="country_code_india">+91</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="or">OR</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_have_been_send_the_code_verification_to_your_mobile_number">We have been send the code verification to your Mobile number</string>
    <string name="didnt_receive_the_code">Didn\'t receive the code?</string>
    <string name="re_send">Re-Send</string>
    <string name="submit">submit</string>
    <string name="sign_up_to">Sign up to</string>
    <string name="forget_password">Forget Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>


    <string name="malformed_phone_error">Invalid Phone Number</string>
    <string name="malformed_otp_error">Invalid OTP format</string>
    <string name="otp_sent_failed">Invalid Request</string>
    <string name="malformed_fname_error">Firstname can\'t be empty</string>
    <string name="malformed_lname_error">Lastname can\'t be empty</string>
    <string name="malformed_email_empty_error">Email can\'t be empty</string>
    <string name="malformed_email_error">Invalid Email address</string>
    <string name="malformed_password_error">Length of the password should be atleast 6 letters</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>


    <string name="grid_text_1">High Returns</string>
    <string name="grid_text_2">Low Risk</string>
    <string name="grid_text_3">Better than FD</string>
    <string name="grid_text_4">SIP with ₹500</string>
    <string name="grid_text_5">Sector Bets</string>
    <string name="grid_text_6">Top Funds</string>
    <string name="kyc_card">Complete your e-KYC by filling complete details to start trading on EM Money</string>
    <string name="ekyc_description">Fill the required details to complete E-Kyc.</string>
    <string name="about_fund">is one of the leading mutual fund in India. ideal for investors who either lack large sums for investment, or for those who neither have the inclination nor the time to research the market, yet want to grow their wealth.
        \n\nThe money collected in mutual funds is invested by professional fund managers in line with the scheme’s stated objective.</string>

</resources>