<?xml version="1.0" encoding="utf-8"?>

<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="585dp"
        android:layout_height="585dp"
        android:layout_marginStart="-160dp"
        android:layout_marginTop="-220dp"
        android:alpha="0.2"
        android:background="@drawable/ellipse_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="352dp"
        android:layout_height="258dp"
        android:layout_marginTop="@dimen/Xlarge"
        android:contentDescription="@string/onboarding1_contentDescription"
        app:layout_constraintBottom_toBottomOf="@+id/ellipse_1"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_onboarding1"
        tools:ignore="ImageContrastCheck" />


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginTop="@dimen/Xlarge"
        android:layout_marginEnd="@dimen/large"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/onboarding1_title"
        android:textAppearance="@style/onBoarding.title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_1" />


    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/onboarding1_desc"
        android:textAppearance="@style/onBoarding.description"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Xlarge"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/description"
        app:layout_constraintStart_toStartOf="@+id/description">

        <View
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:background="@drawable/ellipse_small_filled" />

        <View
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginStart="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:background="@drawable/ellipse_small" />

        <View
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:background="@drawable/ellipse_small" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/onBoarding.button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginBottom="@dimen/Xlarge"
        android:background="@drawable/button_border"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>